--- a/src/AtcWeb/Styles/core/_wasm_loading.scss
+++ b/src/AtcWeb/Styles/core/_wasm_loading.scss
@@ -7,5 +7,6 @@
   font-family: cera pro;
   font-size: 24px;
   text-align: center;
-  color: #3498db;
+  color: #776be7;
+  background-color: #0f0f1a;
 }
